--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,4 +5,4 @@ updates:
     schedule:
       interval: "daily"
     commit-message:
-      prefix: "chore(deps:[gha])"
+      prefix: "chore(bump:[gha])"
