--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    reviewers:
+      - "iodeslykos"
     commit-message:
       prefix: "chore(actions)"
